# llmembed

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
scripts/: README.md  verify_gpu.py
search/: search_index.json
src/llemb/: __init__.py  core.py
src/llemb/backends/: transformers_backend.py  vllm_backend.py
src/llmembed/: core.py  encoder.py  interfaces.py
src/llmembed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llmembed/backends/: transformers_backend.py  vllm_backend.py
tests/: test_batching.py  test_core.py  test_import.py  test_integration_comprehensive.py
tests/backends/: test_layer_defaults.py  test_transformers.py  test_transformers_backend.py  test_transformers_new_strategies.py  test_vllm.py  test_vllm_backend.py
