[project]
name = "llmembed"
version = "0.0.1"
description = "Embedding extractor for decoder-only LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.5",
]

[project.optional-dependencies]
vllm = ["vllm"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.12",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]