[project]
name = "llmembed"
version = "0.0.1"
description = "Embedding extractor for decoder-only LLMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "numpy>=2.0.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
vllm = ["vllm"]
quantization = [
    "bitsandbytes>=0.48.2",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
strict = true
follow_imports = "skip"
ignore_missing_imports = true
# Exclude virtual environment directories
exclude = [
    "\\.venv",
    "venv",
    ".venv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
